fix: set <p> and let dexcription word wrap

--- a/src/assets/scss/_basic.scss
+++ b/src/assets/scss/_basic.scss
@@ -20,3 +20,6 @@ main {
   height: 100%;
   width: 100%;
 }
+p {
+  word-break: break-all;
+}
